maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: ')' expected but integer literal found.
  		setIndication(coord(0) + 1, coord(1) 1 + getIndication(coord(0), coord(1)))
                                                     ^JediEscaper:33: error: ';' expected but ')' found.
  		setIndication(coord(0) + 1, coord(1) 1 + getIndication(coord(0), coord(1)))
                                                                                          ^